<resources>
    <string name="app_name">JavaFundamentals</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activityTitle">Mastering Java Fundamentals</string>
    <string name="btnSubmit">Submit Data</string>
    <string name="enterData">Enter data into the text field</string>
    <string name="enterIndex">Enter an Index #</string>
    <string name="retrieveData">Retrieve Data</string>
    <string name="textAve">No Records, No Average</string>
    <string name="textTotal">No Records</string>
    <string name="txtCollection">Collection</string>
    <string name="txtMedian">Median</string>
    <color name="customColor">#E9EAED</color>
</resources>
